trying to fix background being visible under footer

--- a/contact-us/contact-us.css
+++ b/contact-us/contact-us.css
@@ -372,5 +372,6 @@ align-content: center;
     height: 100vh;
     height: -webkit-fill-available;
     overflow-x: hidden;
+    overflow-y: hidden;
   }
 }
