--- a/skllc.css
+++ b/skllc.css
@@ -363,6 +363,7 @@ a{
     height: 100vh;
     height: -webkit-fill-available;
     overflow-x: hidden;
+    overflow-y: hidden;
   }
 }
 
